fix film list add Navigation, Scrollbar, custom navbar

--- a/src/App.css
+++ b/src/App.css
@@ -168,3 +168,12 @@ section{
     font-size: 1.2rem;
     font-weight: 500;
 }
+
+html::-webkit-scrollbar{
+    width: 0.5rem;
+    background: transparent;
+}
+
+html::-webkit-scrollbar-thumb{
+    background-color: var(--main-color);
+}
